--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "code-vault",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
+  "type": "module",
+  "author": "woong-jae",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-jest-dom": "^5.0.1",
+    "jest": "^29.6.1",
+    "prettier": "^3.0.0",
     "typescript": "^5.1.6"
   }
 }
