--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@code-vault/core",
   "version": "1.0.0",
+  "private": true,
   "description": "core business logics",
   "type": "module",
   "author": "woong-jae",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "jest": "^29.6.1",
+    "typescript": "^5.1.6"
+  }
 }
