--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "type": "module",
   "author": "woong-jae",
   "license": "ISC",
+  "engines": {
+    "node": "^14.13.1 || >=16.0.0"
+  },
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {
-    "@code-vault/core": "workspace:*"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -20,8 +20,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jest-dom": "^5.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.6.1",
-    "prettier": "^3.0.0",
+    "prettier": "^2.8.7",
     "typescript": "^5.1.6"
   }
 }
