--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "core": "pnpm --filter @code-vault/core"
+  },
   "devDependencies": {
-    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
@@ -21,7 +23,6 @@
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.6.1",
     "prettier": "^2.8.7",
     "typescript": "^5.1.6"
   }
