--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,9 +6,14 @@
   "type": "module",
   "author": "woong-jae",
   "license": "ISC",
+  "scripts": {
+    "test": "pnpm jest --watch"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "jest": "^29.6.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
+    "ts-jest": "^29.1.1"
   }
 }
