--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "packageManager": "pnpm@8.6.6",
   "scripts": {
-    "problem-solving": "pnpm --filter @component/problem-solving",
+    "problem-solving": "pnpm --filter @core/problem-solving",
     "extension": "pnpm --filter @code-vault/extension"
   },
   "devDependencies": {
