--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
-  "workspaces": [
-    "packages/*"
-  ],
   "packageManager": "pnpm@8.6.6",
   "scripts": {
-    "problem-solving": "pnpm --filter @core/problem-solving",
-    "chrome-extension": "pnpm --filter @code-vault/chrome-extension"
+    "test": "pnpm jest --watch"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -26,6 +22,11 @@
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "@types/chrome": "^0.0.240",
+    "@types/jest": "^29.5.2",
+    "jest": "^29.6.1",
+    "ts-node": "^10.9.1",
+    "ts-jest": "^29.1.1"
   }
 }
