--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.240",
+    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
@@ -21,12 +23,13 @@
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7",
-    "typescript": "^5.1.6",
-    "@types/chrome": "^0.0.240",
-    "@types/jest": "^29.5.2",
     "jest": "^29.6.1",
+    "prettier": "^2.8.7",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "ts-jest": "^29.1.1"
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "zod": "^3.21.4"
   }
 }
