--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "packageManager": "pnpm@8.6.6",
   "scripts": {
+    "build": "tsc && vite build",
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
@@ -27,7 +28,9 @@
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite": "^4.4.7",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "zod": "^3.21.4"
