--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "packageManager": "pnpm@8.6.6",
   "scripts": {
+    "dev": "vite --open",
     "build": "tsc && vite build",
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
+    "@preact/preset-vite": "^2.5.0",
     "@types/chrome": "^0.0.240",
     "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -26,6 +28,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.6.1",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
@@ -33,6 +36,7 @@
     "vite-tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
+    "preact": "^10.16.0",
     "zod": "^3.21.4"
   }
 }
