--- a/package.json
+++ b/package.json
@@ -18,21 +18,24 @@
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
     "@types/chrome": "^0.0.240",
-    "@types/jest": "^29.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-jest": "^27.2.2",
+    "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.6.1",
-    "prettier": "^2.8.7",
+    "jest": "^29.6.2",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
+    "vite-plugin-css-injected-by-js": "^3.2.1",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
