--- a/package.json
+++ b/package.json
@@ -11,32 +11,37 @@
   },
   "packageManager": "pnpm@8.6.6",
   "scripts": {
-    "dev": "vite --open",
-    "build": "tsc && vite build",
+    "dev": "webpack serve",
+    "build": "NODE_ENV=production webpack",
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
     "@types/chrome": "^0.0.240",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "autoprefixer": "^10.4.14",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
     "postcss": "^8.4.27",
+    "postcss-loader": "^7.3.3",
     "prettier": "^3.0.0",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7",
-    "vite-plugin-css-injected-by-js": "^3.2.1",
-    "vite-tsconfig-paths": "^4.2.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "preact": "^10.16.0",
