feat: 깃허브 OAuth redirect 추가

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["tabs", "activeTab", "scripting", "webRequest"],
+  "permissions": ["tabs", "activeTab", "scripting", "webRequest", "storage"],
   "host_permissions": ["https://*/*"],
   "content_scripts": [
     {
