feat: setting 페이지 셋업

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "packageManager": "pnpm@8.6.6",
   "scripts": {
-    "dev:app": "DEV_TARGET=app webpack serve",
-    "dev:setting": "DEV_TARGET=setting webpack serve",
+    "dev": "webpack serve",
     "build": "NODE_ENV=production webpack",
     "test": "pnpm jest --watch"
   },
