--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@preact/signals": "^1.1.5",
+    "octokit": "^3.1.0",
     "preact": "^10.16.0",
     "zod": "^3.21.4"
   }
