--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,14 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["tabs", "activeTab", "scripting", "webRequest", "storage"],
+  "permissions": [
+    "tabs",
+    "activeTab",
+    "scripting",
+    "webRequest",
+    "storage",
+    "unlimitedStorage"
+  ],
   "host_permissions": ["https://*/*"],
   "web_accessible_resources": [
     {
