--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
