--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,11 @@
   "manifest_version": 3,
   "name": "Code-Vault",
   "description": "Code-Vault에서 제공하는 크롬 확장도구입니다.",
-  "version": "0.1",
+  "version": "1.0.0",
+  "version_name": "1.0.0 beta",
+  "default_locale": "ko",
+  "author": "jwchung0828@gmail.com",
+  "homepage_url": "https://github.com/woong-jae/code-vault",
   "action": {},
   "background": {
     "service_worker": "background.js"
@@ -35,6 +39,12 @@
       "id": "CodeVault-boj",
       "matches": ["https://www.acmicpc.net/status*"],
       "js": ["boj.js"],
+      "world": "MAIN"
+    },
+    {
+      "id": "CodeVault-leetcode",
+      "matches": ["https://leetcode.com/problems/*"],
+      "js": ["leetcode.js"],
       "world": "MAIN"
     },
     {
