--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
+    "@cooby/crx-load-script-webpack-plugin": "^1.1.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.86",
     "@types/chrome": "^0.0.240",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.21",
@@ -37,10 +40,9 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "style-loader": "^3.3.3",
+    "swc-loader": "^0.2.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
