--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
-    "@cooby/crx-load-script-webpack-plugin": "^1.1.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.86",
     "@types/chrome": "^0.0.240",
@@ -33,12 +32,12 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "react-refresh": "^0.14.0",
     "style-loader": "^3.3.3",
     "swc-loader": "^0.2.3",
     "tailwindcss": "^3.3.3",
