--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.86",
     "@types/chrome": "^0.0.240",
@@ -25,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "autoprefixer": "^10.4.14",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.46.0",
