--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "packageManager": "pnpm@8.6.6",
   "scripts": {
     "dev": "webpack serve",
-    "build": "NODE_ENV=production webpack",
+    "build": "webpack",
+    "build:production": "NODE_ENV=production webpack",
     "test": "pnpm jest --watch"
   },
   "devDependencies": {
