chore: 파일 위치 수정

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "packageManager": "pnpm@8.6.6",
   "scripts": {
-    "dev": "webpack serve",
+    "start": "webpack serve",
     "build": "webpack",
     "build:production": "NODE_ENV=production webpack",
     "test": "pnpm jest --watch"
