--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -3,7 +3,7 @@
   "name": "Code-Vault",
   "description": "Code-Vault에서 제공하는 크롬 확장도구입니다.",
   "version": "1.0.0",
-  "version_name": "1.0.0 beta",
+  "version_name": "1.0.0-beta.1",
   "author": "jwchung0828@gmail.com",
   "homepage_url": "https://github.com/woong-jae/code-vault",
   "action": {},
