저장소 생성 로직 오류 해결

--- a/components.json
+++ b/components.json
@@ -11,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "~/base",
-    "utils": "~/base/ui/utils"
+    "components": "~/components",
+    "utils": "~/base/components/utils"
   }
 }
