--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "code-vault",
   "version": "1.0.0",
   "private": true,
-  "description": "",
   "type": "module",
   "author": "woong-jae",
   "license": "ISC",
@@ -65,6 +64,7 @@
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
