--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -2,10 +2,13 @@
   "manifest_version": 3,
   "name": "Code-Vault",
   "description": "Code-Vault에서 제공하는 크롬 확장도구입니다.",
-  "version": "1.0.0.6",
-  "version_name": "1.0.0-beta.6",
+  "version": "1.0.1",
+  "version_name": "1.0.1",
   "author": "jwchung0828@gmail.com",
   "homepage_url": "https://github.com/woong-jae/code-vault",
+  "icons": {
+    "128": "logo-128.png"
+  },
   "action": {},
   "background": {
     "service_worker": "background.js"
